--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
             <div class="parent ">
                 <div class="child1 outline h1">
-                    Teddy
+                    テディー
                 </div>
                 <div class="child2 front h1">
-                    Teddy
+                    テディー
                 </div>
             </div>
 
@@ -33,19 +33,28 @@
                     <div class=" chat-bubble-left-arrow"></div>
                     <div class=" chat-bubble-left">
                         <h3 class=" bg-white-transparent message-text">
-                            Hey how have you been recently?
+                            やあ、元気だったかい？
                         </h3>
                     </div>
-
                 </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 text-center">
+                <div class="bubble-right">
+                    <div class=" chat-bubble-right">
+                        <h3 class=" bg-white-transparent message-text">
+                            Hey how have you been recently? <br> slag face <br> slag face
+                        </h3>
+                    </div>
+                    <div class=" chat-bubble-right-arrow"></div>
 
-                    
-                
-
-
+                    <div class="chat-face-right"><img src="/images/right-face.png" style="width: 100%;"></div>
+                </div>
             </div>
         </div>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
